# MulleObjC-startup

./: .gitignore  .touch  .travis.yml  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: tool-extension
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
cmake/: Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  StandaloneC.cmake
cola/: description.md.bud  properties.plist
src/: MulleObjC-startup.m  import-private.h  import.h
